*** 20011128_1 by lusky
- revved patchlevel to 6.2.1rc2
- another spoofing fix


*** 20011126_1 by db
- Stupid bug in m_gline.c found by David-T, committing before it gets lost



*** 20011121_2 by db
- A bogus numeric would not be cool.



*** 20011121_1 by db
- Make res.c resolve again



*** 20011119_1 by db
- removed trailing \002



*** 20011117_1 by greg
Yes, I'm doing the unthinkable, commiting against -6..

(Pending flames I get from this, there will be 1, maybe 2 more bugfixes
in the next little while..)

- Removed bold from a server notice -- that's silly. (thanks Kimy)


*** 20011115_1 by leeh
- moved the CHANMODE_E check up a level - before we add the +e to the list
  ;)


*** 20011106_2 by wcampbel
Corrected


*** 20011106_1 by wcampbel
Doc change:  | in KLINE (approved by Diane)


*** 20011028_1 by db
- fixed typo



*** 20011027_5 by bill
- cosmetic fix changed [] to () in failed oper notice


*** 20011027_4 by bill
- will now compile.  we were missing two "*/"s in do_query_number()


*** 20011027_3 by bill
- pro died, he shouldn't be in the Hybrid-team


*** 20011027_2 by db
- removed another typedef 



*** 20011027_1 by db
- some res.c fixes



*** 20011025_2 by db
- fixed formatting in s_conf.c
- removed obsfuscation in res.c



*** 20011025_1 by leeh
- as discussed on IRC.


*** 20011024_3 by wcampbel
Misc doc cleanups (approved by Diane)


*** 20011024_2 by db
- removed NO_CHANOPS_ON_SPLIT



*** 20011024_1 by wcampbel
Corrected two pieces of information in example.conf


*** 20011019_1 by db
- ensure all va_end match up with va_start in send.c 
  as pointed out by Aaron Campbell



*** 20011017_1 by db
- removed PACE_WALLOPS, this affects config.h m_info.h m_info.c
  m_wallops.c m_operwall.c 

- cleaned up formatting in res.c so I could follow the logic, still
  havent' found the bug

- cleaned up formatting in dbuf.c



*** 20011011_1 by db
We have to have to have to make sure the config.h is sane, EFNet admins are
lazy.


